Fri Jul  4 11:53:56 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: remove unused code
	  surrounded by `#if ENABLE_SELECTOR_NAMESPACE'

Fri Jul  4 10:08:24 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/rubygems/test_gem_package.rb: avoid tempfile leaks using Tempfile#close!
	* test/rubygems/test_gem_request_set.rb: ditto.
	* test/rubygems/test_gem_request_set_gem_dependency_api.rb: ditto.

Fri Jul  4 04:42:05 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/htp/response.rb (Net::Inflater#inflate_adapter):
	  prevent automatic encoding conversion.

Fri Jul  4 04:39:52 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/response.rb (Net::HTTPResponse.each_response_header):
	  raise first exception even if inflate_body_io.finish raises error.
	  when begin block raises error, finish usually raises error too.

Fri Jul  4 02:56:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#query=): remove validation, just
	  escape. [Feature #2542]

	* lib/uri/generic.rb (URI::Generic#fragment=): ditto.

	* lib/uri/generic.rb (URI::Generic#check_query): removed.

	* lib/uri/generic.rb (URI::Generic#set_query): ditto.

	* lib/uri/generic.rb (URI::Generic#check_fragment): ditto.

	* lib/uri/generic.rb (URI::Generic#set_fragment): ditto.

Thu Jul  3 12:40:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-static-linked-ext): fix for extensions to
	  be linked statically.

	* Makefile.in, common.mk: use ENCSTATIC for enc directory.

	* ext/extmk.rb: supply dependencies of statically linked extension
	  libraries.

Wed Jul  2 15:45:49 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_heap_lazy_sweep): simplify logic.

	* gc.c (gc_page_sweep): return TRUE if empty slots are available.

Wed Jul  2 09:48:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* logger.rb: removed unmaintained code.
	  [Feature #9860][ruby-core:62724]
	* test/logger/test_application.rb: ditto.
