@@ -1,3 +1,11 @@
+Fri Jul  4 18:03:35 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* parse.y (must_be_dynamic_symbol): refactoring.
+	  * add `inline'.
+	  * use UNLIKELY().
+	  * check only DYNAMIC_SYM_P(), otherwise it is a bug.
+	  * lookup_id_str() is not needed in second condition.
+
 Fri Jul  4 11:53:56 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* parse.y: remove unused code
